--- a/draft-00.html
+++ b/draft-00.html
@@ -143,10 +143,10 @@
 <table summary="layout" width="66%" border="0" cellpadding="0" cellspacing="0"><tr><td><table summary="layout" width="100%" border="0" cellpadding="2" cellspacing="1">
 <tr><td class="header">Network Working Group</td><td class="header">M. Amundsen</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Layer 7 Technologies</td></tr>
-<tr><td class="header">Expires: May 7, 2014</td><td class="header">L. Richardson</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">November 3, 2013</td></tr>
+<tr><td class="header">Expires: May 9, 2014</td><td class="header">L. Richardson</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">November 5, 2013</td></tr>
 </table></td></tr></table>
-<h1><br />Application-Level Profile Semantics (ALPS)<br />draft-amundsen-richardson-alps-00</h1>
+<h1><br />Application-Level Profile Semantics (ALPS)<br />draft-amundsen-richardson-alps-00.A</h1>
 
 <h3>Abstract</h3>
 
@@ -185,7 +185,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on May 7, 2014.</p>
+This Internet-Draft will expire on May 9, 2014.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -1944,7 +1944,10 @@ Internationalization Considerations</h3>
 <a name="rfc.section.7"></a><h3>7.&nbsp;
 Acknowledgements</h3>
 
-<p>[TK]
+<p>
+            The following people made contributions to this specification: 
+            Mark Foster.
+        
 </p>
 <a name="rfc.references"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
