mod per issue 21

--- a/draft-00.html
+++ b/draft-00.html
@@ -143,10 +143,10 @@
 <table summary="layout" width="66%" border="0" cellpadding="0" cellspacing="0"><tr><td><table summary="layout" width="100%" border="0" cellpadding="2" cellspacing="1">
 <tr><td class="header">Network Working Group</td><td class="header">M. Amundsen</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Layer 7 Technologies</td></tr>
-<tr><td class="header">Expires: May 9, 2014</td><td class="header">L. Richardson</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">November 5, 2013</td></tr>
+<tr><td class="header">Expires: July 21, 2014</td><td class="header">L. Richardson</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">January 17, 2014</td></tr>
 </table></td></tr></table>
-<h1><br />Application-Level Profile Semantics (ALPS)<br />draft-amundsen-richardson-alps-00.A</h1>
+<h1><br />Application-Level Profile Semantics (ALPS)<br />draft-amundsen-richardson-alps-00.B</h1>
 
 <h3>Abstract</h3>
 
@@ -185,11 +185,11 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on May 9, 2014.</p>
+This Internet-Draft will expire on July 21, 2014.</p>
 
 <h3>Copyright Notice</h3>
 <p>
-Copyright (c) 2013 IETF Trust and the persons identified as the
+Copyright (c) 2014 IETF Trust and the persons identified as the
 document authors.  All rights reserved.</p>
 <p>
 This document is subject to BCP 78 and the IETF Trust's Legal
@@ -1509,8 +1509,10 @@ Complete Representation</h3>
 Applying ALPS documents to Existing Media Types</h3>
 
 <p>
-        An ALPS document can be applied to many existing hypermedia
-        types. <a class='info' href='#example'>Section&nbsp;1.3<span> (</span><span class='info'>A Simple ALPS Example</span><span>)</span></a> gave some informative
+        An ALPS document can be applied to many existing media
+        types as long as there exists an agreed mapping between ALPS and the target
+        media type [TK: point to future mapping documentation]. 
+        <a class='info' href='#example'>Section&nbsp;1.3<span> (</span><span class='info'>A Simple ALPS Example</span><span>)</span></a> gave some informative
         examples of this. Normative, up-to-date guidance on applying
         ALPS documents to existing media types are available at the
         official ALPS Web site (http://alps.io). [I implied earlier
