--- a/draft-00.html
+++ b/draft-00.html
@@ -432,7 +432,7 @@
 </tr>
 <tr>
 <td class="left"></td>
-<td class="right">January 20, 2014</td>
+<td class="right">January 22, 2014</td>
 </tr>
 
     	
@@ -440,7 +440,7 @@
   </table>
 
   <p class="title">Application-Level Profile Semantics (ALPS) <br />
-  <span class="filename">draft-amundsen-richardson-alps-00.C</span></p>
+  <span class="filename">draft-amundsen-richardson-alps-00.D</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>This document describes ALPS, a data format for defining simple descriptions of application-level semantics, similar in complexity to HTML microformats. An ALPS document can be used as a profile to explain the application semantics of a document with an application-agnostic media type (such as HTML, HAL, Collection+JSON, or Siren). This increases the reusability of profile documents across media types.  </p>
@@ -845,7 +845,7 @@
 <a href="#rfc.section.2.2.3">2.2.3.</a> <a href="#prop-descriptor" id="prop-descriptor">'descriptor'</a>
 </h1>
 <p id="rfc.section.2.2.3.p.1">One or more 'descriptor' elements SHOULD appear as children of <a href="#prop-alps">'alps'</a> <cite title="NONE">[prop-alps]</cite>. It may also appear as a child of itself; that is, the 'descriptor' property may be nested.  </p>
-<p id="rfc.section.2.2.3.p.2">The 'descriptor' property MAY have either an <a href="#prop-id">'id'</a> <cite title="NONE">[prop-id]</cite> or <a href="#prop-href">'href'</a> <cite title="NONE">[prop-href]</cite> attribute. It MAY have both. Additionally, the 'descriptor' MAY have any of the following attributes: </p>
+<p id="rfc.section.2.2.3.p.2">The 'descriptor' property SHOULD have either an <a href="#prop-id">'id'</a> <cite title="NONE">[prop-id]</cite> or <a href="#prop-href">'href'</a> <cite title="NONE">[prop-href]</cite> attribute. It MAY have both. Additionally, the 'descriptor' MAY have any of the following attributes: </p>
 
 <ol>
 <li>
@@ -1160,23 +1160,17 @@
 <dt>Required parameters:</dt>
 <dd style="margin-left: 8">None </dd>
 <dt>Optional parameters:</dt>
-<dd style="margin-left: 8">
-<dl>
+<dd style="margin-left: 8"><dl>
 <dt>charset</dt>
 <dd style="margin-left: 8">This parameter has identical semantics to the charset parameter of the 'application/xml' media type as specified in <a href="#RFC3023">[RFC3023]</a>.  </dd>
 <dt>profile</dt>
 <dd style="margin-left: 8">A whitespace-separated list of IRIs identifying specific constraints or conventions that apply to an ALPS document.  A profile must not change the semantics of the resource representation when processed without profile knowledge, so that clients both with and without knowledge of a profiled resource can safely use the same representation. The profile parameter may also be used by clients to express their preferences in the content negotiation process. It is recommended that profile IRIs are dereferenceable and provide useful documentation at that IRI.  </dd>
-</dl>
-<p> </p>
-</dd>
+</dl></dd>
 <dt>Encoding considerations:</dt>
-<dd style="margin-left: 8">
-<dl>
+<dd style="margin-left: 8"><dl>
 <dt>binary</dt>
 <dd style="margin-left: 8">Same as encoding considerations of application/xml as specified in <a href="#RFC3023">[RFC3023]</a>.  </dd>
-</dl>
-<p> </p>
-</dd>
+</dl></dd>
 <dt>Security considerations:</dt>
 <dd style="margin-left: 8">This format shares security issues common to all XML content types. It does not provide executable content.  Information contained in ALPS documents do not require privacy or integrity services.  </dd>
 <dt>Interoperability considerations:</dt>
@@ -1186,8 +1180,7 @@
 <dt>Applications that use this media type:</dt>
 <dd style="margin-left: 8">Various </dd>
 <dt>Additional information:</dt>
-<dd style="margin-left: 8">
-<dl>
+<dd style="margin-left: 8"><dl>
 <dt>magic number(s):</dt>
 <dd style="margin-left: 8">none </dd>
 <dt>file extensions:</dt>
@@ -1196,26 +1189,19 @@
 <dd style="margin-left: 8">TEXT </dd>
 <dt>object idenfiers:</dt>
 <dd style="margin-left: 8">none </dd>
-</dl>
-<p> </p>
-</dd>
+</dl></dd>
 <dt>person to contact for further information:</dt>
-<dd style="margin-left: 8">
-<dl>
+<dd style="margin-left: 8"><dl>
 <dt>Name:</dt>
 <dd style="margin-left: 8">Mike Amundsen </dd>
 <dt>Email:</dt>
 <dd style="margin-left: 8">mca@amundsen.com </dd>
-</dl>
-<p> </p>
-</dd>
+</dl></dd>
 <dt>Intended usage:</dt>
 <dd style="margin-left: 8">Common </dd>
 <dt>Author/change controller:</dt>
 <dd style="margin-left: 8">Mike Amundsen </dd>
 </dl>
-
-<p> </p>
 <h1 id="rfc.section.5.2">
 <a href="#rfc.section.5.2">5.2.</a> <a href="#iana-alps-json" id="iana-alps-json">application/alps+json</a>
 </h1>
@@ -1229,13 +1215,10 @@
 <dt>Required parameters:</dt>
 <dd style="margin-left: 8">None </dd>
 <dt>Optional parameters:</dt>
-<dd style="margin-left: 8">
-<dl>
+<dd style="margin-left: 8"><dl>
 <dt>profile</dt>
 <dd style="margin-left: 8">A whitespace-separated list of IRIs identifying specific constraints or conventions that apply to an ALPS document.  A profile must not change the semantics of the resource representation when processed without profile knowledge, so that clients both with and without knowledge of a profiled resource can safely use the same representation. The profile parameter may also be used by clients to express their preferences in the content negotiation process. It is recommended that profile IRIs are dereferenceable and provide useful documentation at that IRI.  </dd>
-</dl>
-<p> </p>
-</dd>
+</dl></dd>
 <dt>Encoding considerations:</dt>
 <dd style="margin-left: 8">binary </dd>
 <dt>Security considerations:</dt>
@@ -1247,8 +1230,7 @@
 <dt>Applications that use this media type:</dt>
 <dd style="margin-left: 8">Various </dd>
 <dt>Additional information:</dt>
-<dd style="margin-left: 8">
-<dl>
+<dd style="margin-left: 8"><dl>
 <dt>magic number(s):</dt>
 <dd style="margin-left: 8">none </dd>
 <dt>file extensions:</dt>
@@ -1257,26 +1239,19 @@
 <dd style="margin-left: 8">TEXT </dd>
 <dt>object idenfiers:</dt>
 <dd style="margin-left: 8">none </dd>
-</dl>
-<p> </p>
-</dd>
+</dl></dd>
 <dt>person to contact for further information:</dt>
-<dd style="margin-left: 8">
-<dl>
+<dd style="margin-left: 8"><dl>
 <dt>Name:</dt>
 <dd style="margin-left: 8">Mike Amundsen </dd>
 <dt>Email:</dt>
 <dd style="margin-left: 8">mca@amundsen.com </dd>
-</dl>
-<p> </p>
-</dd>
+</dl></dd>
 <dt>Intended usage:</dt>
 <dd style="margin-left: 8">Common </dd>
 <dt>Author/change controller:</dt>
 <dd style="margin-left: 8">Mike Amundsen </dd>
 </dl>
-
-<p> </p>
 <h1 id="rfc.section.6">
 <a href="#rfc.section.6">6.</a> <a href="#internationalization" id="internationalization">Internationalization Considerations</a>
 </h1>
