--- a/index.html
+++ b/index.html
@@ -944,7 +944,7 @@
 
 <dl>
   <dt>"semantic"</dt>
-  <dd style="margin-left: 8">A state element (e.g. HTML.SPAN, HTML.INPUT, etc.) or a hypermedia control that triggers a safe, idempotent transition (e.g. HTTP.GET or HTTP.HEAD).  </dd>
+  <dd style="margin-left: 8">A state element (e.g. HTML.SPAN, HTML.INPUT, etc.).  </dd>
   <dt>"safe"</dt>
   <dd style="margin-left: 8">A hypermedia control that triggers a safe, idempotent state transition (e.g. HTTP.GET or HTTP.HEAD).  </dd>
   <dt>"idempotent"</dt>
