--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 
   <meta name="dct.creator" content="Amundsen, M., Richardson, L., and M. Foster" />
   <meta name="dct.identifier" content="urn:ietf:id:draft-amundsen-richardson-foster-alps-02" />
-  <meta name="dct.issued" scheme="ISO8601" content="2015-3-7" />
+  <meta name="dct.issued" scheme="ISO8601" content="2015-3-9" />
   <meta name="dct.abstract" content="This document describes ALPS, a data format for defining simple descriptions of application-level semantics, similar in complexity to HTML microformats. An ALPS document can be used as a profile to explain the application semantics of a document with an application-agnostic media type (such as HTML, HAL, Collection+JSON, Siren, etc.). This increases the reusability of profile documents across media types.  " />
   <meta name="description" content="This document describes ALPS, a data format for defining simple descriptions of application-level semantics, similar in complexity to HTML microformats. An ALPS document can be used as a profile to explain the application semantics of a document with an application-agnostic media type (such as HTML, HAL, Collection+JSON, Siren, etc.). This increases the reusability of profile documents across media types.  " />
 
@@ -422,7 +422,7 @@
   <td class="right">CA Technologies, Inc.</td>
 </tr>
 <tr>
-  <td class="left">Expires: September 8, 2015</td>
+  <td class="left">Expires: September 10, 2015</td>
   <td class="right">L. Richardson</td>
 </tr>
 <tr>
@@ -439,7 +439,7 @@
 </tr>
 <tr>
   <td class="left"></td>
-  <td class="right">March 7, 2015</td>
+  <td class="right">March 9, 2015</td>
 </tr>
 
     	
@@ -463,7 +463,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on September 8, 2015.</p>
+<p>This Internet-Draft will expire on September 10, 2015.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -933,7 +933,15 @@
 <p id="rfc.section.2.2.10.p.2">Appears as a property of<a href="#prop-link">'link'</a>.  </p>
 <h1 id="rfc.section.2.2.11"><a href="#rfc.section.2.2.11">2.2.11.</a> <a href="#prop-rt" id="prop-rt">'rt'</a></h1>
 <p id="rfc.section.2.2.11.p.1">Indicates the resource type that will be returned when executing the specified network request. The 'rt' attribute SHOULD appear only on a <a href="#prop-descriptor">'descriptor'</a> with a <a href="#prop-type">'type'</a> value of 'safe', 'unsafe', or 'idempotent.' </p>
-<p id="rfc.section.2.2.11.p.2">The 'rt' attribute is OPTIONAL and is an opaque string and MAY match the <a href="#prop-id">'id'</a> of an existing<a href="#prop-descriptor">'descriptor'</a>.  </p>
+<p id="rfc.section.2.2.11.p.2">The 'rt' attribute is OPTIONAL and SHOULD be one of the following: </p>
+
+<ol>
+  <li>A fragment identifier (e.g. rt="#user") which points to the <a href="#prop-id">'id'</a> of an existing <a href="#prop-descriptor">'descriptor'</a> in the current ALPS document.  </li>
+  <li>A resolvable URL (e.g. rt="http://example.org/profiles/user") which points to a valid ALPS document.  </li>
+  <li>A resolvable URL with a fragment identifier (e.g. rt="http://example.org/profiles/user#record") which points to the <a href="#prop-id">'id'</a> of an existing <a href="#prop-descriptor">'descriptor'</a> in a valid ALPS document.  </li>
+</ol>
+
+<p> </p>
 <h1 id="rfc.section.2.2.12"><a href="#rfc.section.2.2.12">2.2.12.</a> <a href="#prop-type" id="prop-type">'type'</a></h1>
 <p id="rfc.section.2.2.12.p.1">Indicates the type of hypermedia control to which the element is applied within the resulting representation.  This SHOULD appear for each <a href="#prop-descriptor">'descriptor'</a> element.  The four valid values are: </p>
 
